--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ footer{
   margin-top: 7px;
 }
 
-.first{
+.first {
   width: 300px;
   border-radius: 40px;
   padding: 20px;
@@ -47,9 +47,32 @@ h1{
   font-family: 'Ranchers', cursive;
   font-size: 45px;
   text-align: center;
+}
+
+#underRubrik{
+  display: flex;
+  justify-content: center;
+}
+
+#underRubrik > h1{
+  font-size: 50px;
+  margin: 20px;
+  padding: 20px;
+  text-align: center;
   border: 1px solid;
 }
 
 #text{
+  display: flex;
+	flex-direction: center;
+	flex-wrap: wrap;
+	justify-content: space-around;
+
+}
+
+#text > div{
+  margin: 10px;
+  padding: 20px;
+  text-align: center;
   border: 1px solid;
 }
