--- a/style.css
+++ b/style.css
@@ -12,21 +12,29 @@ footer{
   background-color: gray;
   width: 100%;
   height: 90px;
-  position: absolute;
+  position: relative;
   bottom: 0;
+}
+footer > p{
+  font-family: 'Ranchers';
+  font-size: 15px;
+  position: relative;
+  text-align: right;
 }
 
 #rubrik{
-  font-family: 'Ranchers', cursive;
+  font-family: 'Ranchers';
   font-size: 110px;
   text-align: center;
+  text-shadow: 5px 5px lightgray;
 }
 
 #bilder{
   text-align: center;
   border-style: dotted;
   border-width: thick;
-  margin-top: 7px;
+  margin-top: 25px;
+  margin-bottom: 20px;
 }
 
 .first {
@@ -44,35 +52,43 @@ footer{
 }
 
 h1{
-  font-family: 'Ranchers', cursive;
+  font-family: 'Ranchers';
   font-size: 45px;
   text-align: center;
 }
 
 #underRubrik{
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  text-shadow: 5px 5px gray;
 }
 
 #underRubrik > h1{
   font-size: 50px;
-  margin: 20px;
-  padding: 20px;
   text-align: center;
-  border: 1px solid;
 }
 
-#text{
-  display: flex;
-	flex-direction: center;
+#list{
+	display: flex;
+	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: space-around;
-
 }
 
-#text > div{
-  margin: 10px;
-  padding: 20px;
-  text-align: center;
-  border: 1px solid;
+#list > div{
+  font-family: 'Ranchers', cursive;
+  font-size: 25px;
+  }
+
+#wiki-link{
+background-color: gray;
+border-radius: 20px;
+padding: 15px;
+font-family: arial, cursive;
+font-size: 15px;
+color: white;
+position: relative;
+left: 44%;
 }
