--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ footer{
   background-color: gray;
   max-width: 100%;
   height: 90px;
-  position: relative;
+  position: absolute;
   bottom: 0; /*så den är längst ner på sidan även om man lägger in mer saker*/
 }
 
@@ -42,11 +42,13 @@ footer > p{
   margin-bottom: 20px;
 }
 
-#text{
-  column-count: 4;
-  column-gap: 40px;
-  column-rule: 8px double purple;
-  font-size: 20px;
+.text {
+  float:left;
+  width:25%;
+}
+
+#total{
+  position: relative;
 }
 
 .first {
@@ -87,7 +89,7 @@ h1{
   font-size: 25px;
   }
 
-  #wiki-link{
+#wiki-link{
   background-color: gray;
   border-radius: 20px; /*rundar kanterna*/
   padding: 15px;
