--- a/style.css
+++ b/style.css
@@ -6,14 +6,16 @@ header{
 
 body{
   background-color: gainsboro; /*grå*/
+  margin: 0; /*footer och header hela vägen ut i kanterna*/
+  padding: 0;
 }
 
 footer{
   background-color: gray;
   max-width: 100%;
   height: 90px;
-  position: absolute;
-  bottom: 0; /*så den är längst ner på sidan även om man lägger in mer saker*/
+  bottom: 0;
+  left:40% /*så den är längst ner på sidan även om man lägger in mer saker*/
 }
 
 footer > p{
@@ -42,13 +44,15 @@ footer > p{
   margin-bottom: 20px;
 }
 
-.text {
-  float:left;
-  width:25%;
+#total{
+  display: flex;
+  flex-wrap: wrap;
 }
 
-#total{
-  position: relative;
+.text {
+  width: 400px;
+  text-align: center;
+  margin: 20px;
 }
 
 .first {
@@ -89,6 +93,18 @@ h1{
   font-size: 25px;
   }
 
+#gif{
+  text-align: center;
+  display: flex;
+  flex-wrap: nowrap; /*när man gör sidan mindre vill jag inte att de ska hamna under*/
+  justify-content: space-around;
+}
+
+.movingcat{
+  height: 350px;
+  display: inline-block;
+}
+
 #wiki-link{
   background-color: gray;
   border-radius: 20px; /*rundar kanterna*/
@@ -100,10 +116,52 @@ h1{
   text-decoration: none; /*inget understreck*/
   }
 
+#gif2{
+  text-align: center;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+}
+
+#gif2 > img{
+  height: 300px;
+  margin: 50px;
+}
+
+#door{
+  text-align: center;
+}
+
+#door img, h2{
+  height: 500px;
+  border-radius: 30px;
+  text-align: center;
+  font-family: 'Ranchers';
+  font-size: 50px;
+  vertical-align: middle;
+  margin-left: 200px;
+  margin-right: 200px;
+
+}
+
 a:visited { /*vanliga fall*/
   color: white;
 }
 
 a:hover { /*håller musen över*/
   color: hotpink;
+}
+
+#test > img {
+  height: 100px;
+  position: absolute;
+  animation: testFunction 15s linear 1s infinite alternate;
+}
+
+@keyframes testFunction {
+  0%   {left:2%; transform: rotateY(0deg);top:500px; top:0;}
+  25%  {left:94%; top:0;}
+  50%  {left:94%; top:500px;}
+  75%  {left:2%; transform: rotateY(180deg);top:500px;}
+  100% {left:2%; top:0;}
 }
