--- a/TributePage/styles/style.css
+++ b/TributePage/styles/style.css
@@ -18,7 +18,7 @@ footer{
   left:40% /*så den är längst ner på sidan även om man lägger in mer saker*/
 }
 
-footer > p{
+footer > p{ /*mitt namn längst ner på sidan*/
   font-family: 'Ranchers';
   font-size: 15px;
   text-align: right;
@@ -31,35 +31,38 @@ footer > p{
   text-shadow: 5px 5px lightgray;
 }
 
-.i{
+.i{ /*de två bilderna i rubriken*/
   width: 80px;
   vertical-align: middle; /*bilderna i rubriken skulle vara brevis texten men i mitten*/
 }
 
-#bilder{
+#bilder{ /*en div runt alla fotona*/
   text-align: center; /*när man gör sidan mindre hamnar bilderna under men i mitten*/
   border-style: dotted;
   border-width: thick;
   margin-top: 25px;
   margin-bottom: 20px;
+  max-width: 100%;
+  justify-content: space-around;
 }
 
-#total{
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.text {
-  width: 400px;
-  text-align: center;
-  margin: 20px;
-}
-
-.first {
-  width: 300px;
+.foto { /*raden med bilder som jag har*/
+  width: 240px;
   border-radius: 40px;
   padding: 20px;
   display: inline-block; /*bilderna är blocken och jag ville ha de brevid varandra*/
+}
+
+.total{ /*en div runt all text*/
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.text { /*för varje paragraf av text*/
+  width: 400px;
+  text-align: center;
+  margin: 20px;
 }
 
 h1{
@@ -68,7 +71,7 @@ h1{
   text-align: center;
 }
 
-#underRubrik{
+#underRubrik{ /*mindre rubik*/
   display: flex;
   flex-direction: row; /*jag ville ha namnen brevid varandra i en rad*/
   flex-wrap: wrap; /*om man justerar storleken på fönstret kan hela flex-boxen anpassa sig om den behöver*/
@@ -88,23 +91,23 @@ h1{
 	justify-content: space-around; /*gör mellanrum mellan föremålen men också mellan föremålen och kanten*/
 }
 
-#list > div{
+#list > div{ /* texten i listan*/
   font-family: 'Ranchers', cursive;
   font-size: 25px;
   }
 
-#gif{
+#gif{ /*div runt alla gifarna*/
   display: flex;
   flex-wrap: nowrap; /*när man gör sidan mindre vill jag inte att de ska hamna under*/
   justify-content: space-around;
 }
 
-.movingcat{
+#gif > img { /*för varje gif försig*/
   height: 350px;
   display: inline-block; /*jag vill ha de brevis varndra men jag vill också få ändra höjden, vilket man inte får med bara inline*/
 }
 
-#wiki-link{
+#wiki-link{ /*wikipedia länken*/
   background-color: gray;
   border-radius: 20px; /*rundar kanterna*/
   padding: 15px;
@@ -115,26 +118,26 @@ h1{
   text-decoration: none; /*inget understreck*/
   }
 
-#gif2{
+  a:visited { /*för wikipdeia länken, vanliga fall*/
+    color: white;
+  }
+  
+  a:hover { /*håller musen över*/
+    color: hotpink;
+  }
+
+#gif2{ /*div runt gifarna*/
   display: flex; /* gör hela diven till en flexbox*/
   flex-wrap: nowrap; /* om jag gör sidan mindre så vill jag inte att bilderna ska hamna under varndra utan de försvinner om de inte för plats*/
   justify-content: space-around; /*jag ville ha bilderna i mitten men lika muycket från kanten som från varandra*/
 }
 
-#gif2 > img{
+#gif2 > img{ /*för varje gif försig*/
   height: 300px;
   margin: 50px;
 }
 
-a:visited { /*vanliga fall*/
-  color: white;
-}
-
-a:hover { /*håller musen över*/
-  color: hotpink;
-}
-
-#runningCat > img {
+#runningCat > img { /* katten som springer i headern*/
   position : absolute; /*eftersom jag inte vill att den ska påverka andra objekt*/
   height: 100px; /*hur stor bilden är*/
   animation: run 20s; /*animationen "run" ska köras i 20 sekunder*/
@@ -142,20 +145,30 @@ a:hover { /*håller musen över*/
 	animation-direction: alternate; /*om den inte ska gå framåt eller bakåt använder man alternativ*/
 }
 
-@keyframes run {
+@keyframes run { /*animation till katten i headern*/
   0%   {left:0px; top: 120px; transform: rotateY(180deg);} /*i början ska den rotera ett halvt varv*/
   50% {left:90%; top:120px;  transform: rotateY(0deg);} /*efter halva ska den var 90% av skärmen till vänster*/
   100% {left:0px; top:120px; transform: rotateY(180deg);} /*sen ska den rotera ett halvt varv till när den är påväg tillbaka*/
 }
 
-#info{
+#info{ /* olika kattraser */
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-around;
-  margin: 150px;
+  margin: 150px; 
 }
 
-@keyframes names{
+.change-text::after { /*namnen som kommer ändras, ::after betyder att de lägger in innehållet efter*/
+  animation : names 40s infinite; /*animationen kommer köras i 40 sekunder föralltid*/
+  content: ""; /*den ska skriva ut det som står innom citationstecknen*/
+  text-align: center;
+  font-size: 60px;
+  font-family: 'Ranchers';
+  margin-top: 200px;
+  color: darkblue;
+}
+
+@keyframes names{  /* animation med namnen på de olika raserna*/
   0% { content : "Maine Coon" } /*texten ändras till det som skrivs i grönt*/
   10% { content: "Cornish Rex" }
   20% { content : "Sphynx" }
@@ -169,17 +182,7 @@ a:hover { /*håller musen över*/
   100% { content : "Oriental" }
 }
 
-.change-text::after {
-  animation : names 40s infinite; /*animationen kommer köras i 40 sekunder föralltid*/
-  content: ""; /*den ska skriva ut det som står innom citationstecknen*/
-  text-align: center;
-  font-size: 60px;
-  font-family: 'Ranchers';
-  margin-top: 200px;
-  color: darkblue;
-}
-
-#change-image   {
+#change-image { /*bilderna som kommer ändras*/
     height: 400px;
     border-radius: 25px; /*rundar kanterna*/
     border: thick dotted;
@@ -187,7 +190,7 @@ a:hover { /*håller musen över*/
     animation: image 40s infinite;
 }
 
-@keyframes image {
+@keyframes image { /* bildernas länkar*/
   0% { content : url(../bilder/mainecoon.jpg) } /*den kommer byta mellan dessa bilder*/
   10% { content : url(../bilder/cornish.jpg) }
   20% { content : url(../bilder/sphynx.jpg) }
@@ -199,4 +202,47 @@ a:hover { /*håller musen över*/
   80% { content : url(../bilder/bengal.jpg) }
   90% { content : url(../bilder/ocicat.jpg) }
   100% { content : url(../bilder/oriental.jpg) }
+}
+
+#rubrikGallery {
+  font-family: 'Ranchers';
+  font-size: 60px;
+  text-align: center;
+  text-shadow: 5px 5px gray;
+}
+
+#bildRad1 { /*första bildraden*/
+  display: flex;
+  justify-content: space-around;
+}
+
+#bildRad2 { /*andra bildraden*/
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.gallery {
+  margin: 5px;
+  border: 2px solid gray;
+  width: 180px;
+  border-radius: 15px;;
+}
+
+.gallery:hover {
+  border: 2px solid black;
+}
+
+.gallery img { /*för bilderna inuti klassen gallery*/
+  width: 100%;
+  height: auto;
+  border-radius: 15px;
+}
+
+.desc { /*beskrivningen som står under bilderna*/
+  padding: 20px;
+  text-align: center;
+  font-family: 'Ranchers';
+  font-size: 16px;
 }
